force-app/main/default/objects/Product_Stock__c/Product_Stock__c.object-meta.xml
<CustomObject>
    <description>Stocks used for Wardrobing project (RMS conso stock + e-commerce)</description>
    <label>Product Stock</label>
    <nameField>
        <label>Product Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>