force-app/main/default/objects/Product_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Master detail on Product Catalogue</description>
    <label>Product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipName>Wardrobing_Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>