force-app/main/default/objects/Product_Stock__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Product Stocks</relationshipLabel>
    <relationshipName>Wardrobing_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>