force-app/main/default/objects/Product_Stock__c/fields/TECH_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_External_ID__c</fullName>
    <description>Used by ETL as External ID. Concatenation of Sku and Retail Store ID</description>
    <externalId>true</externalId>
    <label>TECH External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>