force-app/main/default/objects/Product_Stock__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>ASIA NORTH</fullName>
            </value>
            <value>
                <fullName>ASIA SOUTH</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>